--- a/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
+++ b/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
@@ -5,34 +5,36 @@
     "TickIntervalFactor": 0.97,
     "PalaceHealing" : 50,
     "TroopDefaults": [
-        {
-            "Names": [
-                "1st Police Corps",
-                "2st Police Corps"
-            ],
-            "MaxSpeed": 0.2,
-            "Health": 150,
-            "MaxHealth": 200,
-            "Strength": 30,
-            "Repulsion": 0.001,
-            "Range": 0.085,
-            "ImageName": "Troops"
-        }
+      {
+        "Type": "Police",
+        "Names": [
+          "1st Police Corps",
+          "2st Police Corps"
+        ],
+        "MaxSpeed": 0.2,
+        "Health": 150,
+        "MaxHealth": 200,
+        "Strength": 30,
+        "Repulsion": 0.001,
+        "Range": 0.085,
+        "ImageName": "Troops"
+      }
     ],
     "RebelDefaults": [
-        {
-            "Names": [
-                "Depper Doders",
-                "Hadwi"
-            ],
-            "MinSpeed": 0.025,
-            "MaxSpeed": 0.05,
-            "Health": 100,
-            "MaxHealth": 100,
-            "Strength": 20,
-            "Repulsion": 0.0005,
-            "Range": 0.08,
-            "ImageName": "Riots"
-        }
+      {
+        "Type": "Noobs",
+        "Names": [
+          "Depper Doders",
+          "Hadwi"
+        ],
+        "MinSpeed": 0.025,
+        "MaxSpeed": 0.05,
+        "Health": 100,
+        "MaxHealth": 100,
+        "Strength": 20,
+        "Repulsion": 0.0005,
+        "Range": 0.08,
+        "ImageName": "Riots"
+      }
     ]
 }
