--- a/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
+++ b/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
@@ -7,6 +7,7 @@
         "PalaceHealing": 50,
         "TroopDefaults": [
             {
+				"Type": "Police",
                 "Names": [
                     "1st Police Corps",
                     "2st Police Corps"
@@ -22,6 +23,7 @@
         ],
         "RebelDefaults": [
             {
+				"Type": "Noobs",
                 "Names": [
                     "Depper Doders",
                     "Hadwi"
@@ -45,6 +47,7 @@
         "PalaceHealing": 50,
         "TroopDefaults": [
             {
+				"Type": "Police",
                 "Names": [
                     "1st Police Corps",
                     "2st Police Corps"
@@ -60,6 +63,7 @@
         ],
         "RebelDefaults": [
             {
+				"Type": "Noobs",
                 "Names": [
                     "Depper Doders",
                     "Hadwi"
