Added Oops to JSON

--- a/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
+++ b/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
@@ -40,7 +40,8 @@
               "Aaah",
               "Aww",
               "Daeng",
-              "Nuts"
+              "Nuts",
+              "Oops"
             ],
             "SpawnSounds": [
               "Whistle",
