--- a/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
+++ b/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
@@ -69,37 +69,60 @@
         "TickIntervalFactor": 0.97,
         "PalaceHealing": 50,
         "TroopDefaults": [
-            {
-				"Type": "Police",
-                "Names": [
-                    "1st Police Corps",
-                    "2st Police Corps"
-                ],
-                "MaxSpeed": 0.6,
-                "Health": 200,
-                "MaxHealth": 200,
-                "Strength": 0,
-                "Repulsion": 0.01,
-                "Range": 0.05,
-                "ImageName": "Troops"
-            }
+          {
+            "Type": "Police",
+            "Names": [
+              "1st Police Corps",
+              "2st Police Corps"
+            ],
+            "MaxSpeed": 0.6,
+            "Health": 200,
+            "MaxHealth": 200,
+            "Strength": 0,
+            "Repulsion": 0.01,
+            "Range": 0.05,
+            "ImageName": "Troops",
+            "MarchSounds": [
+              "Fanfare_1",
+              "March_1",
+              "March_2",
+              "March_3",
+              "March_4",
+              "March_5",
+              "Yes_Sir",
+              "Yes_Sir_2"
+            ]
+          }
         ],
         "RebelDefaults": [
-            {
-				"Type": "Noobs",
-                "Names": [
-                    "Depper Doders",
-                    "Hadwi"
-                ],
-                "MinSpeed": 0.025,
-                "MaxSpeed": 0.05,
-                "Health": 100,
-                "MaxHealth": 100,
-                "Strength": 0,
-                "Repulsion": 0.0005,
-                "Range": 0.05,
-                "ImageName": "Riots"
-            }
+          {
+            "Type": "Noobs",
+            "Names": [
+              "Depper Doders",
+              "Hadwi"
+            ],
+            "MinSpeed": 0.025,
+            "MaxSpeed": 0.05,
+            "Health": 100,
+            "MaxHealth": 100,
+            "Strength": 0,
+            "Repulsion": 0.0005,
+            "Range": 0.05,
+            "ImageName": "Riots",
+            "KillSounds": [
+              "Aaah",
+              "Aww",
+              "Daeng",
+              "Nuts",
+              "Oops"
+            ],
+            "SpawnSounds": [
+              "Whistle",
+              "Whistle_2",
+              "Whistle_3",
+              "Whistle_4"
+            ]
+          }
         ]
     },
     {
@@ -109,35 +132,58 @@
         "TickIntervalFactor": 0.97,
         "PalaceHealing": 50,
         "TroopDefaults": [
-            {
-                "Names": [
-                    "1st Police Corps",
-                    "2st Police Corps"
-                ],
-                "MaxSpeed": 0.4,
-                "Health": 200,
-                "MaxHealth": 200,
-                "Strength": 0,
-                "Repulsion": -0.002,
-                "Range": 0.05,
-                "ImageName": "Troops"
-            }
+          {
+            "Names": [
+              "1st Police Corps",
+              "2st Police Corps"
+            ],
+            "MaxSpeed": 0.4,
+            "Health": 200,
+            "MaxHealth": 200,
+            "Strength": 0,
+            "Repulsion": -0.002,
+            "Range": 0.05,
+            "ImageName": "Troops",
+            "MarchSounds": [
+              "Fanfare_1",
+              "March_1",
+              "March_2",
+              "March_3",
+              "March_4",
+              "March_5",
+              "Yes_Sir",
+              "Yes_Sir_2"
+            ]
+          }
         ],
         "RebelDefaults": [
-            {
-                "Names": [
-                    "Depper Doders",
-                    "Hadwi"
-                ],
-                "MinSpeed": 0.025,
-                "MaxSpeed": 0.05,
-                "Health": 100,
-                "MaxHealth": 100,
-                "Strength": 0,
-                "Repulsion": 0.00005,
-                "Range": 0.05,
-                "ImageName": "Riots"
-            }
+          {
+            "Names": [
+              "Depper Doders",
+              "Hadwi"
+            ],
+            "MinSpeed": 0.025,
+            "MaxSpeed": 0.05,
+            "Health": 100,
+            "MaxHealth": 100,
+            "Strength": 0,
+            "Repulsion": 0.00005,
+            "Range": 0.05,
+            "ImageName": "Riots",
+            "KillSounds": [
+              "Aaah",
+              "Aww",
+              "Daeng",
+              "Nuts",
+              "Oops"
+            ],
+            "SpawnSounds": [
+              "Whistle",
+              "Whistle_2",
+              "Whistle_3",
+              "Whistle_4"
+            ]
+          }
         ]
     }
 ]
