--- a/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
+++ b/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
@@ -33,7 +33,14 @@
           "Yes_Sir",
           "Yes_Sir_2"
         ],
-        "UnitCost": 100
+        "UnitCost": 100,
+        "Bases": [
+          {
+            "Pos_x": 0.5,
+            "Pos_y": 0.5,
+            "Radius":  0.07
+          }
+        ]
       }
     ],
     "RebelDefaults": [
@@ -101,7 +108,14 @@
           "Yes_Sir",
           "Yes_Sir_2"
         ],
-        "UnitCost": 100
+        "UnitCost": 100,
+        "Bases": [
+          {
+            "Pos_x": 0.5,
+            "Pos_y": 0.5,
+            "Radius": 0.07
+          }
+        ]
       }
     ],
     "RebelDefaults": [
@@ -168,7 +182,14 @@
           "Yes_Sir",
           "Yes_Sir_2"
         ],
-        "UnitCost": 100
+        "UnitCost": 100,
+        "Bases": [
+          {
+            "Pos_x": 0.5,
+            "Pos_y": 0.5,
+            "Radius": 0.07
+          }
+        ]
       }
     ],
     "RebelDefaults": [
@@ -234,7 +255,14 @@
           "Yes_Sir",
           "Yes_Sir_2"
         ],
-        "UnitCost": 100
+        "UnitCost": 100,
+        "Bases": [
+          {
+            "Pos_x": 0.5,
+            "Pos_y": 0.5,
+            "Radius": 0.07
+          }
+        ]
       }
     ],
     "RebelDefaults": [
