--- a/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
+++ b/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
@@ -41,7 +41,40 @@
             "Radius":  0.07
           }
         ]
+      },
+	  {
+        "Type": "Army",
+        "Names": [
+          "1st Army Corps",
+          "2st Army Corps"
+        ],
+        "MaxSpeed": 0.4,
+        "Health": 150,
+        "MaxHealth": 200,
+        "Strength": 30,
+        "Repulsion": 0.001,
+        "Range": 0.055,
+        "ImageName": "Riot_M",
+        "MarchSounds": [
+          "Fanfare_1",
+          "March_1",
+          "March_2",
+          "March_3",
+          "March_4",
+          "March_5",
+          "Yes_Sir",
+          "Yes_Sir_2"
+        ],
+        "UnitCost": 100,
+        "Bases": [
+          {
+            "Pos_x": 0.795,
+            "Pos_y": 0.512,
+            "Radius":  0.07
+          }
+        ]
       }
+
     ],
     "RebelDefaults": [
       {
