--- a/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
+++ b/ldjam50/Assets/StreamingAssets/GameFieldSettings.json
@@ -26,7 +26,7 @@
           "Red": 0.251424,
           "Green": 0.3966849,
           "Blue": 0.7075472,
-          "Alpha": 0.8196079
+          "Alpha": 0.95
         },
         "ImageName": "Police",
         "MarchSounds": [
@@ -64,7 +64,7 @@
           "Red": 0,
           "Green": 0.5,
           "Blue": 0,
-          "Alpha": 0.8823529
+          "Alpha": 0.95
         },
         "ImageName": "Riot_M2",
         "MarchSounds": [
@@ -139,7 +139,7 @@
           "Red": 0.251424,
           "Green": 0.3966849,
           "Blue": 0.7075472,
-          "Alpha": 0.8196079
+          "Alpha": 0.95
         },
         "MaxSpeed": 0.6,
         "Health": 200,
@@ -219,7 +219,7 @@
           "Red": 0.251424,
           "Green": 0.3966849,
           "Blue": 0.7075472,
-          "Alpha": 0.8196079
+          "Alpha": 0.95
         },
         "MaxSpeed": 0.4,
         "Health": 200,
@@ -298,7 +298,7 @@
           "Red": 0.251424,
           "Green": 0.3966849,
           "Blue": 0.7075472,
-          "Alpha": 0.8196079
+          "Alpha": 0.95
         },
         "MaxSpeed": 0.6,
         "Health": 1000000,
